# $Id: Makefile.am,v 1.1 2001/06/21 09:27:52 christof Exp $

SUBDIRS=src examples po
	
EXTRA_DIST = ./config.rpath m4/ChangeLog  ./config.rpath  ./config.rpath  ./config.rpath m4/ChangeLog  AUTHORS TODO README configure

CLEANFILES = *~


ACLOCAL_AMFLAGS = -I m4

glade:
	glade-- --noaccelerators widgets.glade
