# $Id: configure.in,v 1.15 2004/04/29 16:30:02 christof Exp $

AC_PREREQ(2.50)
AC_INIT(ManuProC_Widgets,0.8.0, [manuproc-developer-de@berlios.de])
AC_CONFIG_AUX_DIR(.)

MPC_WDG_MAJOR_VERSION=`echo $PACKAGE_VERSION | sed -e 's/^\(.*\)\..*\..*$/\1/'`
MPC_WDG_MINOR_VERSION=`echo $PACKAGE_VERSION | sed -e 's/^.*\.\(.*\)\..*$/\1/'`
MPC_WDG_MICRO_VERSION=`echo $PACKAGE_VERSION | sed -e 's/^.*\..*\.\(.*\)$/\1/'`
AC_SUBST(MPC_WDG_MAJOR_VERSION)
AC_SUBST(MPC_WDG_MINOR_VERSION)
AC_SUBST(MPC_WDG_MICRO_VERSION)

AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS(config.h)

AC_PREFIX_DEFAULT(/usr/local)

AC_PROG_CXX
AM_PROG_LIBTOOL

dnl *************************************************
dnl gettext support
dnl *************************************************

GETTEXT_PACKAGE=labor
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",
		[the gettext domain])

dnl Add the languages which your application supports here.
if test x$mingw = xtrue ; then
  AM_GLIB_GNU_GETTEXT([external])
else
  AM_GNU_GETTEXT_VERSION([0.17])
  AM_GNU_GETTEXT([external])
fi

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test -z "${DATADIRNAME}"
then DATADIRNAME=share
fi
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale",
		[the location of locale files])
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale",
		[the location of locale files])
fi

AC_LANG_CPLUSPLUS

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(CXXFLAGS)

PETIG_CHECK_COMMONXX
PETIG_CHECK_COMMONGTK2
MPC_CHECK_SIGC_MATCH

KOMPONENTEN_INCLUDES="$COMMONXX_INCLUDES $COMMONGTK2_INCLUDES -I\$(top_srcdir)/src"
KOMPONENTEN_LDFLAGS="$COMMONXX_LDFLAGS $COMMONGTK2_LDFLAGS"
KOMPONENTEN_LIBS="\$(top_srcdir)/src/libManuProC_Widgets.a $COMMONXX_LIBS $COMMONGTK2_LIBS"
AC_SUBST(KOMPONENTEN_INCLUDES)
AC_SUBST(KOMPONENTEN_LDFLAGS)
AC_SUBST(KOMPONENTEN_LIBS)

if echo __MINGW32__ | $CPP - - | fgrep -q __MINGW32__
then mingw=false
else mingw=true 
fi
AM_CONDITIONAL(WINDOWS, test x$mingw = xtrue)

AC_OUTPUT(Makefile src/Makefile examples/Makefile  po/Makefile.in\
   examples/dwhouse/Makefile examples/tree_simplest/Makefile \
   examples/MVC/Makefile examples/newtree/Makefile src/libManuProC_Widgets.rc )
