# generated 2002/11/7 16:33:48 CET by christof@puck.petig-baender.de
# using glademm V1.1.2a_cvs
#
# newer (non customized) versions of this file go to Makefile.am_new
EXTRA_PROGRAMS = newtree

newtree_SOURCES = \
	newtree.cc\
	window1_glade.cc \
	window1.cc 

noinst_HEADERS = \
	window1_glade.hh \
	window1.hh 

AM_CXXFLAGS = @KOMPONENTEN_INCLUDES@

newtree_LDADD = @LIBS@ @KOMPONENTEN_LIBS@

AM_LDFLAGS= @KOMPONENTEN_LDFLAGS@ 
#-mwindows -Wl,--enable-runtime-pseudo-reloc


